# ParGibbs

./: .clang-format  .clang-tidy  .clangd  .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md
.github/workflows/: linux.yml  ubuntu.yaml
data/: cuboid_hole.msh  lshape.msh  piece.msh  wrench.msh
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  installation.rst  pybind.rst  requirements.txt  tests.rst
docs/api/: mc_sor.rst  modules.rst  ms.rst  pc_gamgmc.rst  pc_gibbs.rst  pc_gmgmc.rst  sample_callback.rst
docs/examples/: examples.rst
examples/: CMakeLists.txt  README.md  benchmark.c  benchmarkrc  ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  lit.cfg.py  lit.site.cfg.py.in
examples/benchmark/: benchmarkrc  lshape.opts  main.cc  params.hh  piece.opts  problem_mfem.hh  problem_petsc.hh  problems.hh  wrench.opts
examples/general/: CMakeLists.txt  pcmg.cc
examples/include/: problems.hh
examples/mfem/: CMakeLists.txt  main.cc
examples/petsc/: test.cc
examples/python/: Python example.ipynb  autocorrelation.py
examples/red_black_gibbs/: CMakeLists.txt  config.json  gmrf_operator.hh  main.cc
examples/scaling/: CMakeLists.txt  scaling.cc  strong.cc
examples/simple_gmrf/: CMakeLists.txt  config.json  gelman_rubin.cc  gmrf_operator.hh  main.cc
examples/statistics/: CMakeLists.txt  convergence.cc  iact_test.cc  mat.hh  qoi.hh
examples_c/: CMakeLists.txt  main.c  matern.c
examples_cpp/: CMakeLists.txt  main.cc
examples_py/: Python example.ipynb
include/pargibbs/: gibbs.hh  matrix_operator.hh  mpi_helper.hh  pargibbs.hh
include/pargibbs/common/: helpers.hh  lattice_operator.hh  log.hh  traits.hh
include/pargibbs/lattice/: coordinate.hh  helpers.hh  lattice.hh  partition.hh  types.hh
include/pargibbs/samplers/: cholesky.hh  gibbs.hh  multigrid.hh  sampler_statistics.hh
include/parmgmc/: coloring.h  dm_hierarchy.hh  gaussian_posterior.hh  iact.h  linear_operator.hh  mc_sor.h  mpi_helper.hh  ms.h  obs.h  parmgmc.h  problems.h  stats.h
include/parmgmc/common/: coloring.hh  helpers.hh  lattice_operator.hh  log.hh  petsc_helper.hh  timer.hh  traits.hh  types.hh
include/parmgmc/grid/: grid_operator.hh
include/parmgmc/ksp/: cgs.h
include/parmgmc/lattice/: helpers.hh  lattice.hh  partition.hh  types.hh
include/parmgmc/pc/: pc_block_gibbs.h  pc_chols.h  pc_gamgmc.h  pc_gibbs.h  pc_gmgmc.h  pc_hogwild.h  pc_tmbsor.h
include/parmgmc/random/: ziggurat.h
include/parmgmc/samplers/: cholesky.hh  gibbs.hh  hogwild.hh  mgmc.hh  multicolor_gibbs.hh  multigrid.hh  nodal_gibbs.hh  pc_cholsampler.hh  pc_gibbs.hh  sample_chain.hh  sampler_statistics.hh  sor.hh  sor_preconditioner.hh
python/: CMakeLists.txt  README.md  main.cc  petsc_caster.hh
report/: bibliography.bib  main.tex
share/pkgconfig/: parmgmc.pc.in
src/: CMakeLists.txt  cgs.c  coloring.c  first_order_locally_linear.cc  iact.c  mc_sor.c  ms.c  obs.c  parmgmc.c  pc_block_gibbs.c  pc_chols.c  pc_gamgmc.c  pc_gibbs.c  pc_gmgmc.c  pc_hogwild.c  pc_tmbsor.c  problems.c  stats.c  ziggurat.c
src/pargibbs/: cholesky.hh  forward_substitution.hh  gibbs.hh  mpi_helper.cc
src/pargibbs/common/: helpers.cc
src/pargibbs/lattice/: lattice.cc
src/pargibbs/samplers/: gibbs.cc
src/parmgmc/: mpi_helper.cc
src/parmgmc/common/: helpers.cc
src/parmgmc/lattice/: lattice.cc
src/red_black_gibbs/: CMakeLists.txt  gmrf_operator.hh  idea.org  main.cc
test/: CMakeLists.txt  README.md  gibbs.cc  handler.hh  lit.cfg.py  lit.site.cfg.py.in
test/tests/: prior.c  prior.cc
tests/: CMakeLists.txt  cholesky.cc  coloring.cc  dm_hierarchy.cc  helpers.cc  hogwild.cc  lattice.cc  linear_operator.cc  mgmc.cc  multicolor_gibbs.cc  samplers.cc  solvers.cc  test.cc  test_helpers.hh  test_main.cc
